--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -21,7 +21,7 @@
 
   <header>
     <nav>
-      <a href="#">Services</a>
+      <a href="services.html">Services</a>
       <a href="#">Product</a>
       <a href="#">Vision</a>
       <a href="#">Features</a>
@@ -56,7 +56,7 @@
 
     <div class="bottom-content">
       <div class="text-content">
-        <h4>Services</h4>
+        <a href="services.html"><h4>Services</h4></a>
         <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
       </div>
       <div class="text-content">
