--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Great Idea!</title>
+  <title>Great Idea! - Services</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
@@ -24,7 +24,7 @@ Features
 About
 Contact
 
-<img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+<a href="index.html"><img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></a>
 
 
 <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
